--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,6 +38,8 @@ android {
     dependencies {
         implementation 'androidx.annotation:annotation:1.0.0'
         implementation 'androidx.core:core:1.0.0'
+        implementation 'com.google.firebase:firebase-ml-vision:24.0.2'
+        implementation 'com.google.firebase:firebase-ml-vision-barcode-model:16.1.0'
     }
     testOptions {
         unitTests.returnDefaultValues = true
